fix(QTDI-3124): fix merge issues